@@ -29,7 +29,6 @@ export(mysqlClientLibraryVersions)
 export(mysqlHasDefault)
 exportClasses(MySQLConnection)
 exportClasses(MySQLDriver)
-exportClasses(MySQLObject)
 exportClasses(MySQLResult)
 exportMethods(SQLKeywords)
 exportMethods(dbApply)
@@ -63,6 +62,7 @@ exportMethods(dbWriteTable)
 exportMethods(fetch)
 exportMethods(isSQLKeyword)
 exportMethods(make.db.names)
+exportMethods(show)
 exportMethods(summary)
 import(DBI)
 import(methods)
