@@ -73,37 +73,8 @@ CLIENT_MULTI_RESULTS     <- 131072 # Enable/disable multi-results
 
 setOldClass("data.frame")      ## to appease setMethod's signature warnings...
 
-#' Class MySQLObject
-#'
-#' Base class for all MySQL-specific DBI classes
-#'
-#' @export
-setClass("MySQLObject",
-  contains = c("DBIObject", "VIRTUAL"),
-  slots = list(Id = "integer")
-)
-
-## coercion methods
-setAs("MySQLObject", "integer", function(from) from@Id)
-
-#### Temporary compatibility fix for TSMySQL
-setClass("dbObjectId")
-setAs("dbObjectId", "integer", function(from) from@Id)
-
 setGeneric("summary")
 setGeneric("format")
-
-## formating, showing, printing,...
-setMethod("format", "MySQLObject", function(x, ...) {
-  paste("(", paste(x@Id, collapse=","), ")", sep="")
-})
-
-setMethod("show", "MySQLObject", function(object) {
-  expired <- if(isIdCurrent(object)) "" else "Expired "
-  str <- paste("<", expired, class(object), ":", format(object), ">", sep="")
-  cat(str, "\n")
-  invisible(NULL)
-})
 
 #' Check whether a database handle object is valid or not
 #'
@@ -132,112 +103,4 @@ checkValid <- function(obj) {
 
   stop("Expired ", class(obj), call = FALSE)
 }
-
-#' Determine the SQL Data Type of an S object
-#'
-#' This method is a straight-forward implementation of the corresponding
-#' generic function.
-#'
-#' @param dbObj any \code{MySQLObject} object, e.g., \code{MySQLDriver},
-#' \code{MySQLConnection}, \code{MySQLResult}.
-#' @param obj R/S-Plus object whose SQL type we want to determine.
-#' @param \dots any other parameters that individual methods may need.
-#' @export
-#' @examples
-#' dbDataType(RMySQL::MySQL(), "a")
-#' dbDataType(RMySQL::MySQL(), 1:3)
-#' dbDataType(RMySQL::MySQL(), 2.5)
-setMethod("dbDataType", c("MySQLObject", "ANY"), function(dbObj, obj) {
-  rs.class <- data.class(obj)    ## this differs in R 1.4 from older vers
-  rs.mode <- storage.mode(obj)
-  if(rs.class == "numeric" || rs.class == "integer") {
-    sql.type <- if(rs.mode=="integer") "bigint" else  "double"
-  } else {
-    sql.type <- switch(rs.class,
-      character = "text",
-      logical = "tinyint",  ## but we need to coerce to int!!
-      factor = "text",      ## up to 65535 characters
-      ordered = "text",
-      "text")
-  }
-  sql.type
-})
-
-#' Make R/S-Plus identifiers into legal SQL identifiers
-#'
-#' These methods are straight-forward implementations of the corresponding
-#' generic functions.
-#'
-#' @param dbObj any MySQL object (e.g., \code{MySQLDriver}).
-#' @param snames a character vector of R/S-Plus
-#'   identifiers (symbols) from which we need to make SQL identifiers.
-#' @param name a character vector of SQL identifiers we want to check against
-#'   keywords from the DBMS.
-#' @param unique logical describing whether the resulting set of SQL names
-#'   should be unique.  Its default is \code{TRUE}. Following the SQL 92
-#'   standard, uniqueness of SQL identifiers is determined regardless of whether
-#'   letters are upper or lower case.
-#' @param allow.keywords logical describing whether SQL keywords should be
-#'   allowed in the resulting set of SQL names.  Its default is \code{TRUE}
-#' @param keywords a character vector with SQL keywords, by default it is
-#'   \code{.MySQLKeywords} define in \code{RMySQL}. This may be overriden by
-#'   users.
-#' @param case a character string specifying whether to make the
-#'   comparison as lower case, upper case, or any of the two.  it defaults to
-#'   \code{any}.
-#' @param ... Unused, needed for compatibility with generic.
-#' @export
-setMethod("make.db.names",
-   signature(dbObj="MySQLObject", snames = "character"),
-   def = function(dbObj, snames, keywords = .MySQLKeywords,
-       unique, allow.keywords, ...){
-       #      make.db.names.default(snames, keywords = .MySQLKeywords, unique = unique,
-       #                            allow.keywords = allow.keywords)
-       "makeUnique" <- function(x, sep = "_") {
-	   if (length(x) == 0)
-	       return(x)
-	   out <- x
-	   lc <- make.names(tolower(x), unique = FALSE)
-	   i <- duplicated(lc)
-	   lc <- make.names(lc, unique = TRUE)
-	   out[i] <- paste(out[i], substring(lc[i], first = nchar(out[i]) +
-		   1), sep = sep)
-	   out
-       }
-       fc <- substring(snames, 1, 1)
-       lc <- substring(snames, nchar(snames))
-       i <- match(fc, c("'", "\"","`"), 0) > 0 & match(lc, c("'", "\"","`"),
-	   0) > 0
-       snames[!i] <- make.names(snames[!i], unique = FALSE)
-       if (unique)
-	   snames[!i] <- makeUnique(snames[!i])
-       if (!allow.keywords) {
-	   kwi <- match(keywords, toupper(snames), nomatch = 0L)
-
-	   # We could check to see if the database we are connected to is
-	   # running in ANSI mode. That would allow double quoted strings
-	   # as database identifiers. Until then, the backtick needs to be used.
-	   snames[kwi] <- paste("`", snames[kwi], "`", sep = "")
-       }
-       gsub("\\.", "_", snames)
-   },
-   valueClass = "character"
-)
-
-#' @export
-#' @rdname make.db.names-MySQLObject-character-method
-setMethod("SQLKeywords", "MySQLObject",
-   def = function(dbObj, ...) .MySQLKeywords,
-   valueClass = "character"
-)
-
-#' @export
-#' @rdname make.db.names-MySQLObject-character-method
-setMethod("isSQLKeyword",
-   signature(dbObj="MySQLObject", name="character"),
-   def = function(dbObj, name, keywords = .MySQLKeywords, case, ...){
-        isSQLKeyword.default(name, keywords = .MySQLKeywords, case = case)
-   },
-   valueClass = "character"
-)
 
