@@ -1,10 +1,0 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/MySQL.R
-\docType{class}
-\name{MySQLObject-class}
-\alias{MySQLObject-class}
-\title{Class MySQLObject}
-\description{
-Base class for all MySQL-specific DBI classes
-}
-
