@@ -1,15 +1,17 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/MySQL.R
+% Please edit documentation in R/data-type.R
 \docType{methods}
-\name{dbDataType,MySQLObject-method}
-\alias{dbDataType,MySQLObject-method}
+\name{dbDataType,MySQLDriver-method}
+\alias{dbDataType,MySQLConnection-method}
+\alias{dbDataType,MySQLDriver-method}
 \title{Determine the SQL Data Type of an S object}
 \usage{
-\S4method{dbDataType}{MySQLObject}(dbObj, obj)
+\S4method{dbDataType}{MySQLDriver}(dbObj, obj)
+
+\S4method{dbDataType}{MySQLConnection}(dbObj, obj)
 }
 \arguments{
-\item{dbObj}{any \code{MySQLObject} object, e.g., \code{MySQLDriver},
-\code{MySQLConnection}, \code{MySQLResult}.}
+\item{dbObj}{A \code{MySQLDriver} or \code{MySQLConnection}.}
 
 \item{obj}{R/S-Plus object whose SQL type we want to determine.}
 
