@@ -1,18 +1,18 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/MySQL.R
+% Please edit documentation in R/escaping.R
 \docType{methods}
-\name{make.db.names,MySQLObject,character-method}
-\alias{SQLKeywords,MySQLObject-method}
-\alias{isSQLKeyword,MySQLObject,character-method}
-\alias{make.db.names,MySQLObject,character-method}
+\name{make.db.names,MySQLConnection,character-method}
+\alias{SQLKeywords,MySQLConnection-method}
+\alias{isSQLKeyword,MySQLConnection,character-method}
+\alias{make.db.names,MySQLConnection,character-method}
 \title{Make R/S-Plus identifiers into legal SQL identifiers}
 \usage{
-\S4method{make.db.names}{MySQLObject,character}(dbObj, snames,
-  keywords = .MySQLKeywords, unique = TRUE, allow.keywords = TRUE, ...)
+\S4method{make.db.names}{MySQLConnection,character}(dbObj, snames,
+  keywords = .SQL92Keywords, unique = TRUE, allow.keywords = TRUE, ...)
 
-\S4method{SQLKeywords}{MySQLObject}(dbObj, ...)
+\S4method{SQLKeywords}{MySQLConnection}(dbObj, ...)
 
-\S4method{isSQLKeyword}{MySQLObject,character}(dbObj, name,
+\S4method{isSQLKeyword}{MySQLConnection,character}(dbObj, name,
   keywords = .MySQLKeywords, case = c("lower", "upper", "any")[3], ...)
 }
 \arguments{
